--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "preact": "^8.4.2",
     "react-markdown": "^3.6.0",
     "remark-breaks": "^1.0.1",
+    "robust-websocket": "^1.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
