--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "css-loader": "^3.2.0",
     "http-server": "^0.11.1",
     "preact-material-components": "^1.5.8",
     "webpack": "^4.30.0",
