--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "devDependencies": {
     "http-server": "^0.11.1",
+    "preact-material-components": "^1.5.8",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2"
   },
